--- a/flutter_project/brick.yaml
+++ b/flutter_project/brick.yaml
@@ -1,13 +1,9 @@
 name: flutter_project
-description: A new brick created with the Mason CLI.
+description: A brick to add riverpod, go_router, google_font with Theme support in the Deafault App no more time spend to add boilerplate code
+repository: https://github.com/Monzim/mason_bricks/tree/main/flutter_project
 
-# The following defines the version and build number for your brick.
-# A version number is three numbers separated by dots, like 1.2.34
-# followed by an optional build number (separated by a +).
 version: 0.1.0+1
 
-# The following defines the environment for the current brick.
-# It includes the version of mason that the brick requires.
 environment:
   mason: ">=0.1.0-dev.26 <0.1.0"
 
