--- a/page/brick.yaml
+++ b/page/brick.yaml
@@ -1,5 +1,6 @@
 name: page
-description: A new brick created with the Mason CLI.
+description: A brick to add page to riverpod app with specific template.
+repository: https://github.com/Monzim/mason_bricks/tree/main/page
 
 # The following defines the version and build number for your brick.
 # A version number is three numbers separated by dots, like 1.2.34
