--- a/flutter_project/brick.yaml
+++ b/flutter_project/brick.yaml
@@ -1,5 +1,5 @@
 name: flutter_project
-description: A brick to add riverpod, go_router, google_font with Theme support in the Deafault App no more time spend to add boilerplate code
+description: Brick to add riverpod, go_router, google_font with Theme support in the Default App. No more time lost boilerplate code.
 repository: https://github.com/Monzim/mason_bricks/tree/main/flutter_project
 
 version: 0.1.0+1
