--- a/flutter_project/brick.yaml
+++ b/flutter_project/brick.yaml
@@ -1,5 +1,5 @@
 name: flutter_project
-description: Brick to add riverpod, go_router, google_font with Theme support in the Default App. No more time lost to write boilerplate code.
+description: Add riverpod, go_router, google_font with Theme support in Default App. No more time lost to write boilerplate code.
 repository: https://github.com/Monzim/mason_bricks/tree/main/flutter_project
 
 version: 0.1.5
